--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
-    "express": "4.17.1",
+    "express": "^4.18.2",
     "joi": "^17.9.2",
+    "mongoose": "^7.3.0",
     "morgan": "1.10.0",
+    "node-fetch": "^3.3.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -23,7 +26,7 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "2.0.15"
+    "nodemon": "^2.0.22"
   },
   "description": "Виконайте форк цього репозиторію для виконання домашніх завдань (2-6) Форк створить репозиторій на вашому http://github.com",
   "main": ".eslintrc.js",
